# libfobos

./: .gitignore  CMakeLists.txt  README.md  build-mac.sh  fobos-sdr.rules  install_manifest.txt  libfobos.pc.in  libfobos_sdr.pc.in  versions.txt
.github/workflows/: ci.yml
debian/: .gitignore  changelog  control  copyright  libfobos0.install
eval/: fobos_devinfo_main.c  fobos_fwloader_main.c  fobos_recorder_main.c  fobos_scanner_main.c
fobos/: fobos.c  fobos.h
libusb/: README.md
measurements/: iq-balance.ipynb  phase-noise.ipynb
measurements/phase_noise/: si5351c_1000MHz_LNA1_VGA0_FREF40MHz.csv  si5351c_1000MHz_LNA1_VGA0_FREF50MHz.csv  si5351c_1000MHz_LNA1_VGA0_FREF50MHz_MAX2830INTPLL.csv  si5351c_1000MHz_LNA1_VGA0_FREF50MHz_MAX2830INTPLL_RFFC5072OPT_CableEatonU422-003-G2_FilterStick.csv  si5351c_1000MHz_LNA1_VGA0_FREF50MHz_MAX2830INTPLL_RFFC5072OPT_CableEatonU422-003-G2_NoFilterStick.csv  si5351c_1000MHz_LNA1_VGA0_FREF50MHz_MAX2830INTPLL_RFFC5072OPT_CableFobosSDRStock_NoFilterStick.csv  si5351c_1000MHz_LNA1_VGA0_FREF50MHz_MAX2830INTPLL_RFFC5072OPT_CableStarTechUSB3CAB1M_NoFilterStick.csv  si5351c_1200MHz_LNA1_VGA0_FREF40MHz.csv  si5351c_400MHz_LNA1_VGA0_FREF40MHz.csv  si5351c_600MHz_LNA1_VGA0_FREF40MHz.csv  si5351c_800MHz_LNA1_VGA0_FREF40MHz.csv  si5351c_800MHz_LNA1_VGA0_FREF50MHz.csv
wav/: wav_file.c  wav_file.h
